add installation command

--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
-  "name": "array-x",
+  "name": "@damianc/array-x",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "jasmine",
     "build": "node node_modules/webpack/bin/webpack.js --config webpack.config.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/damianc/array-x.git"
   },
   "author": "",
   "license": "ISC",
